--- a/ngApp/src/index.html
+++ b/ngApp/src/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <!-- Latest compiled JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <!-- Open Sans Font -->
+  <!-- Open Sans,Lobster Font -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Lobster" rel="stylesheet">
 </head>
 
