completed baseline testing framework using selenium. Implemented smoke tests for navbar navigation and for ensuring login modal opens and closes without issue. An issue that occurs often is if the lgin modal is closed, attempting another click throws an exception as 'another element would receive click', indicating that (it seems) the modal-fade div element would be in the way despite it being not displayed.

--- a/BlitzServer/RESTServices/test-output/old/Default suite/groups.html
+++ b/BlitzServer/RESTServices/test-output/old/Default suite/groups.html
@@ -1,3 +1,4 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>smoke</td><td>LoginPageTest.runningTest()[pri:0, instance:io.flashboard.testsuites.LoginPageTest@52a86356]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>login</td><td>NavigationTest.loginModalOpenAndCloseTest()[pri:0, instance:io.flashboard.testsuites.NavigationTest@52a86356]<br/></td></tr>
+<tr><td>smoke</td><td>NavigationTest.loginModalOpenAndCloseTest()[pri:0, instance:io.flashboard.testsuites.NavigationTest@52a86356]<br/>NavigationTest.navbarTest()[pri:0, instance:io.flashboard.testsuites.NavigationTest@52a86356]<br/></td></tr>
 </table>
