--- a/BlitzServer/RESTServices/test-output/emailable-report.html
+++ b/BlitzServer/RESTServices/test-output/emailable-report.html
@@ -31,43 +31,16 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">0</td><td class="numi">0</td><td class="numi">0</td><td class="numi_attn">1</td><td class="numi">8.2 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">2</td><td class="numi">2</td><td class="numi">0</td><td class="numi">0</td><td class="numi">9.8 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
-<tr><th colspan="4">Default test &#8212; failed</th></tr>
-<tr class="failedodd"><td rowspan="1">io.flashboard.testsuites.LoginPageTest</td><td><a href="#m1"><b>runningTest</b> (smoke) </a></td><td class="numi">1</td><td>1513719720281</td><td class="numi">998</td></tr>
+<tr><th colspan="4">Default test &#8212; passed</th></tr>
+<tr class="passedodd"><td rowspan="2">io.flashboard.testsuites.NavigationTest</td><td><a href="#m1"><b>navbarTest</b> (smoke) </a></td><td class="numi">1</td><td>1513793372062</td><td class="numi">827</td></tr><tr class="passedodd"><td><a href="#m2"><b>loginModalOpenAndCloseTest</b> (smoke, login) </a></td><td class="numi">1</td><td>1513793372892</td><td class="numi">911</td></tr>
 </table>
 <h1>Default test</h1>
-<h2 id="m1">io.flashboard.testsuites.LoginPageTest:runningTest</h2>
-<div style="padding-left:3em">
-<p>unknown error: Element &lt;li _ngcontent-c1=&quot;&quot; class=&quot;login&quot; data-target=&quot;#myModal&quot; data-toggle=&quot;modal&quot;&gt;...&lt;/li&gt; is not clickable at point (775, 26). Other element would receive the click: &lt;div _ngcontent-c1=&quot;&quot; class=&quot;modal fade&quot; id=&quot;myModal&quot; role=&quot;dialog&quot; style=&quot;display: block;&quot;&gt;...&lt;/div&gt;
-  (Session info: chrome=63.0.3239.84)
-  (Driver info: chromedriver=2.34.522940 (1a76f96f66e3ca7b8e57d503b4dd3bccfba87af1),platform=Windows NT 10.0.16299 x86_64) (WARNING: The server did not provide any stacktrace information)
-Command duration or timeout: 54 milliseconds
-Build info: version: &apos;3.4.0&apos;, revision: &apos;unknown&apos;, time: &apos;unknown&apos;
-System info: host: &apos;ACERON&apos;, ip: &apos;192.168.60.74&apos;, os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;1.8.0_144&apos;
-Driver info: org.openqa.selenium.chrome.ChromeDriver
-Capabilities [{applicationCacheEnabled=false, rotatable=false, mobileEmulationEnabled=false, networkConnectionEnabled=false, chrome={chromedriverVersion=2.34.522940 (1a76f96f66e3ca7b8e57d503b4dd3bccfba87af1), userDataDir=C:\Users\Stuart\AppData\Local\Temp\scoped_dir4156_21163}, takesHeapSnapshot=true, pageLoadStrategy=normal, databaseEnabled=false, handlesAlerts=true, hasTouchScreen=false, version=63.0.3239.84, platform=XP, browserConnectionEnabled=false, nativeEvents=true, acceptSslCerts=true, locationContextEnabled=true, webStorageEnabled=true, browserName=chrome, takesScreenshot=true, javascriptEnabled=true, cssSelectorsEnabled=true, setWindowRect=true, unexpectedAlertBehaviour=}]
-Session ID: 395b78343b2d72923ff02da043f84686</p>
-sun.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
-<br/>at sun.reflect.NativeConstructorAccessorImpl.newInstance(Unknown Source)
-<br/>at sun.reflect.DelegatingConstructorAccessorImpl.newInstance(Unknown Source)
-<br/>at java.lang.reflect.Constructor.newInstance(Unknown Source)
-<br/>at org.openqa.selenium.remote.ErrorHandler.createThrowable(ErrorHandler.java:215)
-<br/>at org.openqa.selenium.remote.ErrorHandler.throwIfResponseFailed(ErrorHandler.java:167)
-<br/>at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:671)
-<br/>at org.openqa.selenium.remote.RemoteWebElement.execute(RemoteWebElement.java:272)
-<br/>at org.openqa.selenium.remote.RemoteWebElement.click(RemoteWebElement.java:82)
-<br/>at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-<br/>at sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)
-<br/>at sun.reflect.DelegatingMethodAccessorImpl.invoke(Unknown Source)
-<br/>at java.lang.reflect.Method.invoke(Unknown Source)
-<br/>at org.openqa.selenium.support.pagefactory.internal.LocatingElementHandler.invoke(LocatingElementHandler.java:51)
-<br/>at com.sun.proxy.$Proxy13.click(Unknown Source)
-<br/>at io.flashboard.pages.HomepageFactory.clickPollLogin(HomepageFactory.java:61)
-<br/>at io.flashboard.testsuites.LoginPageTest.runningTest(LoginPageTest.java:35)
-<br/>25 lines not shown
-</div>
+<h2 id="m1">io.flashboard.testsuites.NavigationTest:navbarTest</h2>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m2">io.flashboard.testsuites.NavigationTest:loginModalOpenAndCloseTest</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
