--- a/BlitzServer/RESTServices/test-output/old/Default suite/classes.html
+++ b/BlitzServer/RESTServices/test-output/old/Default suite/classes.html
@@ -4,14 +4,19 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>io.flashboard.testsuites.LoginPageTest</td>
+<td>io.flashboard.testsuites.NavigationTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>runningTest</td>
+<td>loginModalOpenAndCloseTest</td>
+<td>smoke login </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>navbarTest</td>
 <td>smoke </td>
 </tr>
 <tr>
