--- a/BlitzServer/RESTServices/test-output/old/Default suite/methods.html
+++ b/BlitzServer/RESTServices/test-output/old/Default suite/methods.html
@@ -1,22 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9c6faa">  <td>17/12/19 16:41:53</td>   <td>0</td> <td title="&gt;&gt;LoginPageTest.beforeSuite()[pri:0, instance:io.flashboard.testsuites.LoginPageTest@52a86356]">&gt;&gt;beforeSuite</td> 
+<tr bgcolor="9c6faa">  <td>17/12/20 13:09:25</td>   <td>0</td> <td title="&gt;&gt;NavigationTest.beforeSuite()[pri:0, instance:io.flashboard.testsuites.NavigationTest@52a86356]">&gt;&gt;beforeSuite</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@660143728</td>   <td></td> </tr>
-<tr bgcolor="9c6faa">  <td>17/12/19 16:41:53</td>   <td>18</td> <td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.beforeTest()[pri:0, instance:io.flashboard.testsuites.LoginPageTest@52a86356]">&gt;&gt;beforeTest</td> 
+<tr bgcolor="9c6faa">  <td>17/12/20 13:09:25</td>   <td>19</td> <td>&nbsp;</td><td title="&gt;&gt;NavigationTest.beforeTest()[pri:0, instance:io.flashboard.testsuites.NavigationTest@52a86356]">&gt;&gt;beforeTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@660143728</td>   <td></td> </tr>
-<tr bgcolor="9c6faa">  <td>17/12/19 16:42:00</td>   <td>7237</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.beforeClass()[pri:0, instance:io.flashboard.testsuites.LoginPageTest@52a86356]">&gt;&gt;beforeClass</td> 
+<tr bgcolor="9c6faa">  <td>17/12/20 13:09:32</td>   <td>6885</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NavigationTest.beforeClass()[pri:0, instance:io.flashboard.testsuites.NavigationTest@52a86356]">&gt;&gt;beforeClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@660143728</td>   <td></td> </tr>
-<tr bgcolor="9c6faa">  <td>17/12/19 16:42:00</td>   <td>7243</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.beforeMethod()[pri:0, instance:io.flashboard.testsuites.LoginPageTest@52a86356]">&gt;&gt;beforeMethod</td> 
+<tr bgcolor="9c6faa">  <td>17/12/20 13:09:32</td>   <td>6890</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NavigationTest.beforeMethod()[pri:0, instance:io.flashboard.testsuites.NavigationTest@52a86356]">&gt;&gt;beforeMethod</td> 
 <td>&nbsp;</td>  <td>main@660143728</td>   <td></td> </tr>
-<tr bgcolor="9c6faa">  <td>17/12/19 16:42:00</td>   <td>7243</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.runningTest()[pri:0, instance:io.flashboard.testsuites.LoginPageTest@52a86356]">runningTest</td> 
+<tr bgcolor="9c6faa">  <td>17/12/20 13:09:32</td>   <td>6890</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NavigationTest.navbarTest()[pri:0, instance:io.flashboard.testsuites.NavigationTest@52a86356]">navbarTest</td> 
   <td>main@660143728</td>   <td></td> </tr>
-<tr bgcolor="9c6faa">  <td>17/12/19 16:42:01</td>   <td>8250</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.afterMethod()[pri:0, instance:io.flashboard.testsuites.LoginPageTest@52a86356]">&lt;&lt;afterMethod</td> 
+<tr bgcolor="9c6faa">  <td>17/12/20 13:09:32</td>   <td>7719</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NavigationTest.afterMethod()[pri:0, instance:io.flashboard.testsuites.NavigationTest@52a86356]">&lt;&lt;afterMethod</td> 
 <td>&nbsp;</td>  <td>main@660143728</td>   <td></td> </tr>
-<tr bgcolor="9c6faa">  <td>17/12/19 16:42:01</td>   <td>8250</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.afterClass()[pri:0, instance:io.flashboard.testsuites.LoginPageTest@52a86356]">&lt;&lt;afterClass</td> 
+<tr bgcolor="9c6faa">  <td>17/12/20 13:09:32</td>   <td>7720</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NavigationTest.beforeMethod()[pri:0, instance:io.flashboard.testsuites.NavigationTest@52a86356]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@660143728</td>   <td></td> </tr>
+<tr bgcolor="9c6faa">  <td>17/12/20 13:09:32</td>   <td>7720</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NavigationTest.loginModalOpenAndCloseTest()[pri:0, instance:io.flashboard.testsuites.NavigationTest@52a86356]">loginModalOpenAndCloseTest</td> 
+  <td>main@660143728</td>   <td></td> </tr>
+<tr bgcolor="9c6faa">  <td>17/12/20 13:09:33</td>   <td>8633</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NavigationTest.afterMethod()[pri:0, instance:io.flashboard.testsuites.NavigationTest@52a86356]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@660143728</td>   <td></td> </tr>
+<tr bgcolor="9c6faa">  <td>17/12/20 13:09:33</td>   <td>8634</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NavigationTest.afterClass()[pri:0, instance:io.flashboard.testsuites.NavigationTest@52a86356]">&lt;&lt;afterClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@660143728</td>   <td></td> </tr>
-<tr bgcolor="9c6faa">  <td>17/12/19 16:42:01</td>   <td>8254</td> <td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.afterTest()[pri:0, instance:io.flashboard.testsuites.LoginPageTest@52a86356]">&lt;&lt;afterTest</td> 
+<tr bgcolor="9c6faa">  <td>17/12/20 13:09:33</td>   <td>8636</td> <td>&nbsp;</td><td title="&lt;&lt;NavigationTest.afterTest()[pri:0, instance:io.flashboard.testsuites.NavigationTest@52a86356]">&lt;&lt;afterTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@660143728</td>   <td></td> </tr>
-<tr bgcolor="9c6faa">  <td>17/12/19 16:42:01</td>   <td>8341</td> <td title="&lt;&lt;LoginPageTest.afterSuite()[pri:0, instance:io.flashboard.testsuites.LoginPageTest@52a86356]">&lt;&lt;afterSuite</td> 
+<tr bgcolor="9c6faa">  <td>17/12/20 13:09:35</td>   <td>9878</td> <td title="&lt;&lt;NavigationTest.afterSuite()[pri:0, instance:io.flashboard.testsuites.NavigationTest@52a86356]">&lt;&lt;afterSuite</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@660143728</td>   <td></td> </tr>
 </table>
