--- a/ngApp/src/index.html
+++ b/ngApp/src/index.html
@@ -16,6 +16,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <!-- Open Sans,Lobster Font -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Lobster|Alegreya+Sans" rel="stylesheet">
+  <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
 </head>
 
 <body>
