--- a/ngApp/src/index.html
+++ b/ngApp/src/index.html
@@ -17,6 +17,8 @@
   <!-- Open Sans,Lobster Font -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Lobster|Alegreya+Sans" rel="stylesheet">
   <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
+  <!-- w3 include html js -->
+  <script src="https://www.w3schools.com/lib/w3.js"></script>
 </head>
 
 <body>
